--- a/app/src/main/res/layout/activity_remote_local_merge.xml
+++ b/app/src/main/res/layout/activity_remote_local_merge.xml
@@ -52,6 +52,7 @@
                     android:layout_height="48dp"
                     android:background="?attr/selectableItemBackground"
                     android:clickable="true"
+                    android:id="@+id/remoteClientIndicator"
                     android:orientation="horizontal">
 
                     <TextView
@@ -107,6 +108,7 @@
                     android:layout_height="48dp"
                     android:background="?attr/selectableItemBackground"
                     android:clickable="true"
+                    android:id="@+id/localClientIndicator"
                     android:orientation="horizontal">
 
                     <TextView
