--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,6 +5,7 @@
     <color name="colorPrimaryLight">#1E88E5</color>
     <color name="colorAccent">#FF4081</color>
     <color name="colorAccentDark">#F50057</color>
+    <color name="titleText_color">#FFFFFF</color>
     <color name="colorAccentLight">#FF80AB</color>
 
     <color name="overlay_dark_10">#1A000000</color>
